--- a/app/src/main/res/layout/activity_buy_365.xml
+++ b/app/src/main/res/layout/activity_buy_365.xml
@@ -104,6 +104,7 @@
                         android:text="一年365会员" />
 
                     <TextView
+                        android:id="@+id/act_tv_buy_365_will_price"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_centerHorizontal="true"
