--- a/app/src/main/res/layout/activity_pay_order.xml
+++ b/app/src/main/res/layout/activity_pay_order.xml
@@ -41,7 +41,7 @@
             android:layout_marginBottom="@dimen/distance"
             android:layout_marginLeft="@dimen/distance"
             android:layout_marginTop="@dimen/distance"
-            fresco:actualImageScaleType="fitCenter"
+            fresco:actualImageScaleType="fitXY"
             fresco:failureImage="@mipmap/stand"
             fresco:placeholderImage="@mipmap/stand"
             fresco:placeholderImageScaleType="fitXY"
