--- a/app/src/main/res/layout/activity_write_order.xml
+++ b/app/src/main/res/layout/activity_write_order.xml
@@ -44,15 +44,17 @@
                 <RelativeLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:padding="@dimen/distance_10">
+                    android:padding="@dimen/distance_15">
 
                     <TextView
+                        android:textSize="@dimen/text_size_15"
                         android:id="@+id/tv_write_order_name"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="点击添加地址" />
 
                     <TextView
+                        android:textSize="@dimen/text_size_15"
                         android:id="@+id/tv_write_order_phone"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
@@ -60,6 +62,7 @@
                         android:layout_toRightOf="@+id/tv_write_order_name" />
 
                     <TextView
+                        android:textSize="@dimen/text_size_15"
                         android:id="@+id/tv_write_order_address"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
