--- a/app/src/main/res/layout/item_clothes_info.xml
+++ b/app/src/main/res/layout/item_clothes_info.xml
@@ -42,14 +42,16 @@
             android:textSize="@dimen/text_size_15" />
 
         <TextView
+            android:layout_marginRight="@dimen/distance_5"
+            android:layout_toLeftOf="@+id/iv_edit"
             android:id="@+id/item_clothes_content"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@+id/item_clothes_style"
-            android:layout_marginTop="@dimen/distance_10"
-            android:text="介绍" />
+            android:layout_marginTop="@dimen/distance_10" />
 
         <ImageView
+            android:id="@+id/iv_edit"
             android:layout_width="20dp"
             android:layout_height="20dp"
             android:layout_alignParentEnd="true"
