--- a/app/src/main/res/layout/activity_item_details.xml
+++ b/app/src/main/res/layout/activity_item_details.xml
@@ -26,11 +26,21 @@
             android:textSize="@dimen/text_size_big" />
     </RelativeLayout>
 
+    <ProgressBar
+        android:id="@+id/pb_buy_loading"
+        android:layout_width="match_parent"
+        android:layout_height="5dp"
+        android:layout_below="@+id/rl_item_details_top"
+        android:background="@color/back_ground_6e"
+        android:visibility="gone" />
+
     <WebView
+
         android:id="@+id/wb_item_show"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@+id/rl_item_details_top">
+        android:layout_below="@+id/pb_buy_loading"
+        android:layout_marginBottom="40dp">
 
     </WebView>
 
