--- a/app/src/main/res/layout/activity_order.xml
+++ b/app/src/main/res/layout/activity_order.xml
@@ -20,10 +20,11 @@
             android:src="@drawable/back" />
 
         <TextView
+            android:id="@+id/tv_order_top"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
-            android:text="工作室"
+            android:text="工作室详情"
             android:textColor="#fff"
             android:textSize="@dimen/text_size_big" />
     </RelativeLayout>
