--- a/app/src/main/res/layout/fragment_365.xml
+++ b/app/src/main/res/layout/fragment_365.xml
@@ -24,153 +24,189 @@
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
             android:layout_centerVertical="true"
-            android:padding="@dimen/distance_10"
-            android:text="历史记录"
+            android:padding="@dimen/distance_15"
+            android:text="记录"
             android:textColor="@color/main_color_write"
             android:visibility="gone" />
     </RelativeLayout>
 
-
-    <LinearLayout
-        android:id="@+id/ll_no_pay_money"
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/tv_365_top"
-        android:orientation="vertical"
-        android:padding="@dimen/distance_10"
-        android:visibility="gone">
+        android:layout_height="match_parent"
+        android:layout_below="@+id/tv_365_top">
 
         <LinearLayout
+            android:id="@+id/ll_no_pay_money"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="@drawable/background"
+            android:layout_height="wrap_content"
             android:orientation="vertical"
             android:padding="@dimen/distance_10">
 
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:text="抱歉，您当前并未开通365服务" />
-
-            <Button
-                android:id="@+id/btn_will_pay"
-                android:layout_width="wrap_content"
-                android:layout_height="40dp"
-                android:layout_gravity="center"
-                android:layout_marginTop="@dimen/distance_10"
-                android:background="@drawable/btn_select"
-                android:text="立即开通"
-                android:textColor="@color/main_color_write" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/distance_10"
-            android:background="@drawable/background"
-            android:orientation="vertical">
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:padding="@dimen/distance_10"
-                android:text="365特权"
-                android:textSize="@dimen/text_size_17" />
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:background="@color/color_6c" />
-
             <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:paddingBottom="@dimen/distance_10"
-                android:paddingLeft="@dimen/distance_20"
-                android:paddingRight="@dimen/distance_20"
-                android:paddingTop="@dimen/distance_10">
+                android:layout_height="match_parent"
+                android:background="@drawable/background"
+                android:orientation="vertical"
+                android:padding="@dimen/distance_15">
 
-                <com.facebook.drawee.view.SimpleDraweeView
-                    android:id="@+id/sv_365_one"
-                    android:layout_width="50dp"
-                    android:layout_height="50dp"
-                    fresco:placeholderImage="@mipmap/clothes_choose" />
+                <TextView
+                    android:id="@+id/tv_tishi"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:text="抱歉，您当前并未开通365服务" />
 
-                <com.facebook.drawee.view.SimpleDraweeView
-                    android:layout_width="50dp"
-                    android:layout_height="50dp"
+                <Button
+                    android:id="@+id/btn_will_pay_copy"
+                    android:layout_width="wrap_content"
+                    android:layout_height="40dp"
+                    android:layout_below="@+id/tv_tishi"
                     android:layout_centerHorizontal="true"
-                    fresco:placeholderImage="@mipmap/vip" />
+                    android:layout_marginTop="@dimen/distance_15"
+                    android:background="@drawable/btn_select"
+                    android:text="立即开通"
+                    android:textColor="@color/main_color_write" />
 
-                <com.facebook.drawee.view.SimpleDraweeView
-                    android:layout_width="50dp"
-                    android:layout_height="50dp"
-                    android:layout_alignParentEnd="true"
-                    fresco:placeholderImage="@mipmap/vip_logo" />
-
-                <com.facebook.drawee.view.SimpleDraweeView
-                    android:layout_width="50dp"
-                    android:layout_height="50dp"
-                    android:layout_below="@+id/sv_365_one"
-                    android:layout_marginTop="@dimen/distance_10"
-                    fresco:placeholderImage="@mipmap/data_manage" />
-
-                <com.facebook.drawee.view.SimpleDraweeView
-                    android:layout_width="50dp"
-                    android:layout_height="50dp"
-                    android:layout_below="@+id/sv_365_one"
+                <LinearLayout
+                    android:id="@+id/ll_is_activity"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/tv_tishi"
                     android:layout_centerHorizontal="true"
-                    android:layout_marginTop="@dimen/distance_10"
-                    fresco:placeholderImage="@mipmap/private_consultant" />
+                    android:layout_gravity="center"
+                    android:layout_marginTop="@dimen/distance_15"
+                    android:orientation="horizontal"
+                    android:visibility="gone">
+
+                    <Button
+                        android:id="@+id/btn_will_pay"
+                        android:layout_width="wrap_content"
+                        android:layout_height="40dp"
+                        android:background="@drawable/btn_select"
+                        android:text="立即开通"
+                        android:textColor="@color/main_color_write" />
+
+                    <Button
+                        android:id="@+id/btn_will_invite"
+                        android:layout_width="wrap_content"
+                        android:layout_height="40dp"
+                        android:layout_gravity="center"
+                        android:layout_marginLeft="@dimen/distance_20"
+                        android:background="@drawable/btn_select"
+                        android:text="邀请开通"
+                        android:textColor="@color/main_color_write" />
+                </LinearLayout>
 
             </RelativeLayout>
-        </LinearLayout>
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/distance_10"
-            android:background="@drawable/background"
-            android:orientation="vertical">
-
-            <TextView
-                android:id="@+id/textView"
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:gravity="center"
-                android:padding="@dimen/distance_10"
-                android:text="365功能须知"
-                android:textSize="@dimen/text_size_17" />
+                android:layout_marginTop="@dimen/distance_15"
+                android:background="@drawable/background"
+                android:orientation="vertical">
 
-            <TextView
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:padding="@dimen/distance_15"
+                    android:text="365特权"
+                    android:textSize="@dimen/text_size_17" />
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:background="@color/color_6c" />
+
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:paddingBottom="@dimen/distance_15"
+                    android:paddingLeft="@dimen/distance_20"
+                    android:paddingRight="@dimen/distance_20"
+                    android:paddingTop="@dimen/distance_15">
+
+                    <com.facebook.drawee.view.SimpleDraweeView
+                        android:id="@+id/sv_365_one"
+                        android:layout_width="50dp"
+                        android:layout_height="50dp"
+                        fresco:placeholderImage="@mipmap/clothes_choose" />
+
+                    <com.facebook.drawee.view.SimpleDraweeView
+                        android:layout_width="50dp"
+                        android:layout_height="50dp"
+                        android:layout_centerHorizontal="true"
+                        fresco:placeholderImage="@mipmap/vip" />
+
+                    <com.facebook.drawee.view.SimpleDraweeView
+                        android:layout_width="50dp"
+                        android:layout_height="50dp"
+                        android:layout_alignParentEnd="true"
+                        fresco:placeholderImage="@mipmap/vip_logo" />
+
+                    <com.facebook.drawee.view.SimpleDraweeView
+                        android:layout_width="50dp"
+                        android:layout_height="50dp"
+                        android:layout_below="@+id/sv_365_one"
+                        android:layout_marginTop="@dimen/distance_15"
+                        fresco:placeholderImage="@mipmap/data_manage" />
+
+                    <com.facebook.drawee.view.SimpleDraweeView
+                        android:layout_width="50dp"
+                        android:layout_height="50dp"
+                        android:layout_below="@+id/sv_365_one"
+                        android:layout_centerHorizontal="true"
+                        android:layout_marginTop="@dimen/distance_15"
+                        fresco:placeholderImage="@mipmap/private_consultant" />
+
+                </RelativeLayout>
+            </LinearLayout>
+
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:background="@color/color_6c" />
-
-
-            <TextView
-                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:padding="@dimen/distance_10"
-                android:text="☆用户只能开通本地城市工作室" />
+                android:layout_marginTop="@dimen/distance_15"
+                android:background="@drawable/background"
+                android:orientation="vertical">
 
-            <TextView
-                android:id="@+id/textView2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:padding="@dimen/distance_10"
-                android:text="☆开通服务一年后方可以更换工作室" />
+                <TextView
+                    android:id="@+id/textView"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:padding="@dimen/distance_15"
+                    android:text="365功能须知"
+                    android:textSize="@dimen/text_size_17" />
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:background="@color/color_6c" />
+
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:padding="@dimen/distance_15"
+                    android:text="☆用户只能开通本地城市工作室" />
+
+                <TextView
+                    android:id="@+id/textView2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:padding="@dimen/distance_15"
+                    android:text="☆开通服务一年后方可以更换工作室" />
+            </LinearLayout>
         </LinearLayout>
-    </LinearLayout>
+    </ScrollView>
 
     <LinearLayout
         android:id="@+id/ll_yet_pay_money"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@+id/tv_365_top"
-        android:layout_marginTop="@dimen/distance_10"
+        android:layout_marginTop="@dimen/distance_15"
         android:clipChildren="false"
         android:orientation="vertical"
         android:visibility="gone"
@@ -197,8 +233,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="40dp"
                 android:layout_centerInParent="true"
-                android:layout_marginLeft="@dimen/distance_20"
-                android:layout_marginRight="@dimen/distance_20"
+                android:layout_marginLeft="@dimen/distance_40"
+                android:layout_marginRight="@dimen/distance_40"
                 android:background="@drawable/btn_select"
                 android:text="立即购买"
                 android:textColor="@color/main_color_write" />
