--- a/app/src/main/res/layout/fragment_first_order.xml
+++ b/app/src/main/res/layout/fragment_first_order.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
 
     <RelativeLayout
+        android:id="@+id/rl_top"
         android:layout_width="match_parent"
         android:layout_height="40dp"
         android:background="@color/top_color">
@@ -21,18 +22,16 @@
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
+        android:layout_height="match_parent"
+        android:layout_below="@+id/rl_top">
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical">
-
             <com.jude.rollviewpager.RollPagerView
                 android:id="@+id/rv_fragment_first_order"
                 android:layout_width="match_parent"
                 android:layout_height="215dp" />
-
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -40,13 +39,11 @@
                 android:layout_marginRight="@dimen/distance"
                 android:layout_marginTop="20dp"
                 android:background="@drawable/background">
-
                 <RelativeLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_margin="@dimen/distance"
                     android:layout_toLeftOf="@+id/iv_fragment_first_location">
-
                     <Button
                         android:id="@+id/btn_fragment_first_location"
                         android:layout_width="match_parent"
@@ -54,7 +51,6 @@
                         android:background="@drawable/button_write"
                         android:text="正在定位..."
                         android:textColor="@color/text_color" />
-
                     <TextView
                         android:id="@+id/tv_fragment_first_location_reminder"
                         android:layout_width="wrap_content"
@@ -64,7 +60,6 @@
                         android:layout_marginTop="@dimen/distance"
                         android:text="您的位置"
                         android:textSize="@dimen/text_size_big" />
-
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
@@ -134,14 +129,18 @@
                 android:id="@+id/btn_fragment_first_order"
                 android:layout_width="match_parent"
                 android:layout_height="40dp"
-                android:layout_marginBottom="@dimen/distance"
-                android:layout_marginLeft="@dimen/distance"
-                android:layout_marginRight="@dimen/distance"
+                android:layout_alignParentBottom="true"
+                android:layout_marginBottom="@dimen/distance_10"
+                android:layout_marginLeft="@dimen/distance_40"
+                android:layout_marginRight="@dimen/distance_40"
+                android:layout_marginTop="@dimen/distance_20"
                 android:background="@drawable/button_red"
                 android:text="立即预约"
                 android:textColor="@color/write" />
+
         </LinearLayout>
 
     </ScrollView>
 
-</LinearLayout>
+
+</RelativeLayout>
