--- a/app/src/main/res/layout/fragment_mine.xml
+++ b/app/src/main/res/layout/fragment_mine.xml
@@ -17,12 +17,24 @@
             android:text="我的"
             android:textColor="#fff"
             android:textSize="@dimen/text_size_big" />
+
+        <TextView
+            android:id="@+id/iv_mine_setting"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:layout_marginRight="@dimen/distance_10"
+            android:layout_marginTop="7dp"
+            android:padding="@dimen/distance_5"
+            android:text="设置"
+            android:textColor="@color/main_color_write" />
     </RelativeLayout>
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@+id/tl_mine_show">
+
 
         <ImageView
             android:id="@+id/iv_mine_gaosi"
@@ -32,30 +44,36 @@
             android:scaleType="fitXY"
             android:src="@mipmap/beijing" />
 
-        <com.facebook.drawee.view.SimpleDraweeView
-            android:id="@+id/iv_mine_photo"
+        <RelativeLayout
+            android:id="@+id/rl_ttttt"
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="@dimen/distance_10"
-            fresco:placeholderImage="@mipmap/managephoto"
-            fresco:placeholderImageScaleType="fitCenter"
-            fresco:roundAsCircle="true" />
+            android:layout_marginTop="@dimen/distance_10">
 
-        <ImageView
-            android:id="@+id/iv_mine_setting"
-            android:layout_width="wrap_content"
-            android:layout_height="30dp"
-            android:layout_alignParentEnd="true"
-            android:layout_marginRight="15dp"
-            android:layout_marginTop="7dp"
-            android:src="@mipmap/mysetting" />
+            <com.facebook.drawee.view.SimpleDraweeView
+                android:id="@+id/iv_mine_photo"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                fresco:placeholderImage="@mipmap/managephoto"
+                fresco:placeholderImageScaleType="fitCenter"
+                fresco:roundAsCircle="true" />
+
+            <com.facebook.drawee.view.SimpleDraweeView
+                android:id="@+id/sv_mine_vip"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:layout_alignParentBottom="true"
+                android:layout_alignParentEnd="true"
+                fresco:placeholderImage="@mipmap/vip_two"
+                fresco:placeholderImageScaleType="fitCenter" />
+        </RelativeLayout>
 
         <LinearLayout
             android:id="@+id/ll_mine_perch"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/iv_mine_photo"
+            android:layout_below="@+id/rl_ttttt"
             android:layout_centerHorizontal="true"
             android:layout_margin="13dp"
             android:layout_marginTop="10dp">
@@ -81,187 +99,193 @@
 
         </LinearLayout>
 
-        <LinearLayout
+        <ScrollView
             android:id="@+id/ll_mine_daiti"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_below="@+id/ll_mine_perch"
-            android:layout_marginTop="@dimen/distance"
-            android:orientation="vertical">
+            android:layout_below="@+id/ll_mine_perch">
 
             <LinearLayout
-                android:id="@+id/ll_mine_datum"
                 android:layout_width="match_parent"
-                android:layout_height="40dp"
-                android:layout_marginLeft="@dimen/main_margin_left"
-                android:layout_marginRight="@dimen/main_margin_right"
-                android:background="@drawable/background"
-                android:orientation="horizontal">
+                android:layout_height="match_parent"
+                android:layout_marginTop="@dimen/distance"
+                android:orientation="vertical">
 
-                <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="30dp"
-                    android:layout_gravity="center"
-                    android:layout_marginLeft="@dimen/distance"
-                    android:src="@mipmap/myinfo" />
+                <LinearLayout
+                    android:id="@+id/ll_mine_datum"
+                    android:layout_width="match_parent"
+                    android:layout_height="40dp"
+                    android:layout_marginLeft="@dimen/main_margin_left"
+                    android:layout_marginRight="@dimen/main_margin_right"
+                    android:background="@drawable/background"
+                    android:orientation="horizontal">
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:layout_marginLeft="5dp"
-                    android:text="我的资料" />
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="30dp"
+                        android:layout_gravity="center"
+                        android:layout_marginLeft="@dimen/distance"
+                        android:src="@mipmap/myinfo" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:layout_marginLeft="5dp"
+                        android:text="我的资料" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:id="@+id/ll_mine_365"
+                    android:layout_width="match_parent"
+                    android:layout_height="40dp"
+                    android:layout_marginLeft="@dimen/main_margin_left"
+                    android:layout_marginRight="@dimen/main_margin_right"
+                    android:layout_marginTop="3dp"
+                    android:background="@drawable/background"
+                    android:orientation="horizontal">
+
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="30dp"
+                        android:layout_gravity="center"
+                        android:layout_marginLeft="@dimen/distance"
+                        android:src="@mipmap/mine_365" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:layout_marginLeft="5dp"
+                        android:text="我的365" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:id="@+id/ll_mine_report"
+                    android:layout_width="match_parent"
+                    android:layout_height="40dp"
+                    android:layout_marginLeft="@dimen/main_margin_left"
+                    android:layout_marginRight="@dimen/main_margin_right"
+                    android:layout_marginTop="3dp"
+                    android:background="@drawable/background"
+                    android:orientation="horizontal">
+
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="30dp"
+                        android:layout_gravity="center"
+                        android:layout_marginLeft="@dimen/distance"
+                        android:src="@mipmap/myreport" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:layout_marginLeft="5dp"
+                        android:text="我的报告" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:id="@+id/ll_mine_order"
+                    android:layout_width="match_parent"
+                    android:layout_height="40dp"
+                    android:layout_marginLeft="@dimen/main_margin_left"
+                    android:layout_marginRight="@dimen/main_margin_right"
+                    android:layout_marginTop="15dp"
+                    android:background="@drawable/background"
+                    android:orientation="horizontal">
+
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="30dp"
+                        android:layout_gravity="center"
+                        android:layout_marginLeft="@dimen/distance"
+                        android:src="@mipmap/mysubscribe" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:layout_marginLeft="5dp"
+                        android:text="我的预约" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:id="@+id/ll_mine_indent"
+                    android:layout_width="match_parent"
+                    android:layout_height="40dp"
+                    android:layout_marginLeft="@dimen/main_margin_left"
+                    android:layout_marginRight="@dimen/main_margin_right"
+                    android:layout_marginTop="3dp"
+                    android:background="@drawable/background"
+                    android:orientation="horizontal">
+
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="30dp"
+                        android:layout_gravity="center"
+                        android:layout_marginLeft="@dimen/distance"
+                        android:src="@mipmap/myorder" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:layout_marginLeft="5dp"
+                        android:text="我的订单" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:id="@+id/ll_mine_invite"
+                    android:layout_width="match_parent"
+                    android:layout_height="40dp"
+                    android:layout_marginLeft="@dimen/main_margin_left"
+                    android:layout_marginRight="@dimen/main_margin_right"
+                    android:layout_marginTop="15dp"
+                    android:background="@drawable/background"
+                    android:orientation="horizontal">
+
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="30dp"
+                        android:layout_gravity="center"
+                        android:layout_marginLeft="@dimen/distance"
+                        android:src="@mipmap/myinvite" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:layout_marginLeft="5dp"
+                        android:text="邀请好友" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:id="@+id/ll_mine_exit"
+                    android:layout_width="match_parent"
+                    android:layout_height="40dp"
+                    android:layout_marginLeft="@dimen/main_margin_left"
+                    android:layout_marginRight="@dimen/main_margin_right"
+                    android:layout_marginTop="3dp"
+                    android:background="@drawable/background"
+                    android:orientation="horizontal">
+
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="30dp"
+                        android:layout_gravity="center"
+                        android:layout_marginLeft="@dimen/distance"
+                        android:src="@mipmap/myexit" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:layout_marginLeft="5dp"
+                        android:text="退出登录" />
+                </LinearLayout>
+
             </LinearLayout>
-
-            <LinearLayout
-                android:id="@+id/ll_mine_365"
-                android:layout_width="match_parent"
-                android:layout_height="40dp"
-                android:layout_marginLeft="@dimen/main_margin_left"
-                android:layout_marginRight="@dimen/main_margin_right"
-                android:layout_marginTop="3dp"
-                android:background="@drawable/background"
-                android:orientation="horizontal">
-
-                <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="30dp"
-                    android:layout_gravity="center"
-                    android:layout_marginLeft="@dimen/distance"
-                    android:src="@mipmap/mine_365" />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:layout_marginLeft="5dp"
-                    android:text="我的365" />
-            </LinearLayout>
-
-            <LinearLayout
-                android:id="@+id/ll_mine_report"
-                android:layout_width="match_parent"
-                android:layout_height="40dp"
-                android:layout_marginLeft="@dimen/main_margin_left"
-                android:layout_marginRight="@dimen/main_margin_right"
-                android:layout_marginTop="3dp"
-                android:background="@drawable/background"
-                android:orientation="horizontal">
-
-                <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="30dp"
-                    android:layout_gravity="center"
-                    android:layout_marginLeft="@dimen/distance"
-                    android:src="@mipmap/myreport" />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:layout_marginLeft="5dp"
-                    android:text="我的报告" />
-            </LinearLayout>
-
-            <LinearLayout
-                android:id="@+id/ll_mine_order"
-                android:layout_width="match_parent"
-                android:layout_height="40dp"
-                android:layout_marginLeft="@dimen/main_margin_left"
-                android:layout_marginRight="@dimen/main_margin_right"
-                android:layout_marginTop="15dp"
-                android:background="@drawable/background"
-                android:orientation="horizontal">
-
-                <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="30dp"
-                    android:layout_gravity="center"
-                    android:layout_marginLeft="@dimen/distance"
-                    android:src="@mipmap/mysubscribe" />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:layout_marginLeft="5dp"
-                    android:text="我的预约" />
-            </LinearLayout>
-
-            <LinearLayout
-                android:id="@+id/ll_mine_indent"
-                android:layout_width="match_parent"
-                android:layout_height="40dp"
-                android:layout_marginLeft="@dimen/main_margin_left"
-                android:layout_marginRight="@dimen/main_margin_right"
-                android:layout_marginTop="3dp"
-                android:background="@drawable/background"
-                android:orientation="horizontal">
-
-                <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="30dp"
-                    android:layout_gravity="center"
-                    android:layout_marginLeft="@dimen/distance"
-                    android:src="@mipmap/myorder" />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:layout_marginLeft="5dp"
-                    android:text="我的订单" />
-            </LinearLayout>
-
-            <LinearLayout
-                android:id="@+id/ll_mine_invite"
-                android:layout_width="match_parent"
-                android:layout_height="40dp"
-                android:layout_marginLeft="@dimen/main_margin_left"
-                android:layout_marginRight="@dimen/main_margin_right"
-                android:layout_marginTop="15dp"
-                android:background="@drawable/background"
-                android:orientation="horizontal">
-
-                <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="30dp"
-                    android:layout_gravity="center"
-                    android:layout_marginLeft="@dimen/distance"
-                    android:src="@mipmap/myinvite" />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:layout_marginLeft="5dp"
-                    android:text="邀请好友" />
-            </LinearLayout>
-
-            <LinearLayout
-                android:id="@+id/ll_mine_exit"
-                android:layout_width="match_parent"
-                android:layout_height="40dp"
-                android:layout_marginLeft="@dimen/main_margin_left"
-                android:layout_marginRight="@dimen/main_margin_right"
-                android:layout_marginTop="3dp"
-                android:background="@drawable/background"
-                android:orientation="horizontal">
-
-                <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="30dp"
-                    android:layout_gravity="center"
-                    android:layout_marginLeft="@dimen/distance"
-                    android:src="@mipmap/myexit" />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:layout_marginLeft="5dp"
-                    android:text="退出登录" />
-            </LinearLayout>
-        </LinearLayout>
+        </ScrollView>
     </RelativeLayout>
 </RelativeLayout>
