--- a/app/src/main/res/layout/activity_buy_365.xml
+++ b/app/src/main/res/layout/activity_buy_365.xml
@@ -43,7 +43,8 @@
                 android:layout_width="60dp"
                 android:layout_height="60dp"
                 fresco:actualImageScaleType="fitCenter"
-                fresco:failureImage="@mipmap/managephoto"
+                fresco:failureImage="@mipmap/stand"
+                fresco:placeholderImageScaleType="fitXY"
                 fresco:placeholderImage="@mipmap/managephoto"
                 fresco:roundAsCircle="true" />
 
