--- a/app/src/main/res/layout/self_dialog.xml
+++ b/app/src/main/res/layout/self_dialog.xml
@@ -1,76 +1,89 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@drawable/free_dialog_bg"
+    android:orientation="vertical">
+
     <LinearLayout
         android:layout_width="300dp"
-        android:background="@drawable/free_dialog_bg"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
         android:orientation="vertical">
 
         <TextView
 
-            android:textColor="#000000"
             android:id="@+id/my_self_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_margin="15dp"
+            android:layout_marginTop="@dimen/distance_15"
             android:gravity="center"
             android:text="消息提示"
+            android:textColor="#000000"
             android:textSize="@dimen/text_size_18" />
+
+      <TextView
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="#eeeeee" />
+
         <RelativeLayout
-            android:visibility="gone"
             android:id="@+id/rl_myself_dialog_alipay"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:visibility="gone">
+
             <ImageView
-                android:paddingTop="@dimen/distance"
                 android:id="@+id/iv_payorder_wechatphoto"
-                android:src="@mipmap/alipay"
-                android:paddingBottom="@dimen/distance"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
                 android:layout_marginBottom="@dimen/distance"
                 android:layout_marginLeft="@dimen/distance"
-                android:layout_centerVertical="true"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
+                android:paddingBottom="@dimen/distance"
+                android:paddingTop="@dimen/distance"
+                android:src="@mipmap/alipay" />
+
             <TextView
                 android:id="@+id/iv_payorder_wechatname"
-                android:text="支付宝支付"
-                android:layout_toRightOf="@+id/iv_payorder_wechatphoto"
-                android:layout_marginLeft="@dimen/distance"
-                android:layout_centerVertical="true"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:layout_marginLeft="@dimen/distance"
+                android:layout_toRightOf="@+id/iv_payorder_wechatphoto"
+                android:text="支付宝支付" />
+
             <ImageView
                 android:id="@+id/iv_iswechatalipay_alipayNomal"
-                android:src="@mipmap/pay_nomal"
-                android:layout_centerVertical="true"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_alignParentEnd="true"
+                android:layout_centerVertical="true"
                 android:layout_marginRight="@dimen/distance"
                 android:gravity="end"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
+                android:src="@mipmap/pay_nomal" />
+
             <ImageView
                 android:id="@+id/iv_iswechatalipay_alipaySelect"
-                android:src="@mipmap/pay_select"
-                android:layout_centerVertical="true"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_alignParentEnd="true"
+                android:layout_centerVertical="true"
                 android:layout_marginRight="@dimen/distance"
                 android:gravity="end"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
+                android:src="@mipmap/pay_select" />
         </RelativeLayout>
+
         <TextView
-            android:textColor="#000000"
             android:id="@+id/my_self_message"
-            android:gravity="center"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp" />
+            android:layout_marginRight="20dp"
+            android:layout_marginTop="@dimen/distance_10"
+            android:gravity="center"
+            android:textColor="#000000" />
 
         <View
             android:layout_width="match_parent"
@@ -88,11 +101,12 @@
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:background="@color/back_ground_6e"
-                android:textColor="#000"
+                android:background="@drawable/dialog_6e"
                 android:gravity="center"
                 android:singleLine="true"
+                android:textColor="#000"
                 android:textSize="16sp" />
+
             <View
                 android:layout_width="1px"
                 android:layout_height="match_parent"
@@ -103,10 +117,10 @@
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:background="@color/color_ac0000"
+                android:background="@drawable/dialog_ac0000"
                 android:gravity="center"
-                android:textColor="@color/main_color_write"
                 android:singleLine="true"
+                android:textColor="@color/main_color_write"
                 android:textSize="16sp" />
         </LinearLayout>
     </LinearLayout>
