--- a/app/src/main/res/layout/include_pay.xml
+++ b/app/src/main/res/layout/include_pay.xml
@@ -13,26 +13,41 @@
         android:text="需支付" />
 
     <RelativeLayout
+
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:layout_marginTop="10dp">
+        android:layout_marginTop="10dp"
+        android:background="@drawable/shape_bg_go_door"
+        android:padding="10dp">
 
         <TextView
             android:id="@+id/tv_money"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
-            android:layout_marginLeft="5dp"
-            android:text="金额：" />
+            android:text="金额："
+            android:textSize="@dimen/text_size_15" />
 
         <TextView
-            android:id="@+id/tv_pay_money"
+            android:id="@+id/tv_pay_rmb"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
             android:layout_toRightOf="@+id/tv_money"
-            android:text="¥999"
-            android:textColor="@color/color_ac0000" />
+            android:text="¥"
+            android:textColor="@color/color_ac0000"
+            android:textSize="@dimen/text_size_15" />
+
+        <TextView
+            android:id="@+id/tv_godoor_money"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="5dp"
+            android:layout_toRightOf="@+id/tv_pay_rmb"
+            android:text="0"
+            android:textColor="@color/color_ac0000"
+            android:textSize="@dimen/text_size_15" />
 
         <TextView
             android:id="@+id/tv_pay_what"
@@ -40,9 +55,9 @@
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
             android:layout_centerVertical="true"
-            android:padding="5dp"
             android:text="如有疑问，请单击此处"
-            android:textSize="@dimen/text_size_10" />
+            android:textColor="@color/color_ac0000"
+            android:textSize="@dimen/text_size_15" />
 
 
     </RelativeLayout>
