--- a/app/src/main/res/layout/activity_go_door_info.xml
+++ b/app/src/main/res/layout/activity_go_door_info.xml
@@ -21,7 +21,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
-            android:text="预约信息"
+            android:text="预约"
             android:textColor="@color/main_color_write"
             android:textSize="@dimen/text_size_18" />
     </RelativeLayout>
@@ -29,7 +29,7 @@
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_above="@+id/btn_include"
+        android:layout_above="@+id/btn_pay"
         android:layout_below="@+id/rl_top">
 
         <LinearLayout
@@ -49,6 +49,17 @@
         </LinearLayout>
     </ScrollView>
 
-    <include layout="@layout/include_button"></include>
+    <Button
+        android:id="@+id/btn_pay"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="10dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:background="@drawable/red_4dp"
+        android:text="支付"
+        android:textColor="@color/main_color_write"
+        android:textSize="15sp" />
 
 </RelativeLayout>
