--- a/app/src/main/res/layout/activity_list_address.xml
+++ b/app/src/main/res/layout/activity_list_address.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:fitsSystemWindows="true"
-    tools:context="com.example.huichuanyi.ui.activity.ListAddress">
+    tools:context="com.example.huichuanyi.ui.activity.AddressListActivity">
 
     <RelativeLayout
         android:id="@+id/rl_list_address_top"
