--- a/app/src/main/res/layout/activity_loding.xml
+++ b/app/src/main/res/layout/activity_loding.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context=".ui.activity.LoadingActivity">
+    tools:context=".ui.activity.loading.LoadingActivity">
 
     <android.support.v4.view.ViewPager
         android:id="@+id/vp_loading_isFirst"
