--- a/app/src/main/res/layout/activity_manage.xml
+++ b/app/src/main/res/layout/activity_manage.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:fresco="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -12,11 +13,7 @@
         android:layout_height="40dp"
         android:background="@color/top_color">
 
-        <ImageView
-            android:id="@+id/iv_manage_back"
-            android:layout_width="40dp"
-            android:layout_height="match_parent"
-            android:src="@drawable/back" />
+        <include layout="@layout/btn_back"></include>
 
         <TextView
             android:layout_width="wrap_content"
@@ -30,12 +27,12 @@
     <Button
         android:id="@+id/bt_manage_order"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="40dp"
         android:layout_alignParentBottom="true"
         android:layout_marginBottom="@dimen/distance_5"
-        android:layout_marginTop="@dimen/distance_5"
         android:layout_marginLeft="@dimen/distance"
         android:layout_marginRight="@dimen/distance"
+        android:layout_marginTop="@dimen/distance_5"
         android:background="@drawable/button_red"
         android:text="立即预约"
         android:textColor="@color/write" />
@@ -61,12 +58,14 @@
                 android:paddingLeft="@dimen/distance"
                 android:paddingTop="@dimen/distance">
 
-                <com.example.huichuanyi.custom.RoundImageView
+                <com.facebook.drawee.view.SimpleDraweeView
                     android:id="@+id/iv_manage_photo"
                     android:layout_width="45dp"
                     android:layout_height="46dp"
-                    android:scaleType="fitXY"
-                    android:src="@mipmap/stand" />
+                    fresco:actualImageScaleType="centerCrop"
+                    fresco:placeholderImage="@mipmap/stand"
+                    fresco:placeholderImageScaleType="centerCrop"
+                    fresco:roundedCornerRadius="4dp" />
 
                 <TextView
                     android:id="@+id/tv_manage_name"
@@ -122,8 +121,8 @@
                         android:id="@+id/tv_manage_addup"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_alignParentStart="true"
                         android:layout_centerVertical="true"
-                        android:layout_marginTop="@dimen/distance"
                         android:paddingLeft="@dimen/distance"
                         android:text="累计评论" />
 
