--- a/app/src/main/res/layout/activity_my_clothess.xml
+++ b/app/src/main/res/layout/activity_my_clothess.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context=".ui.activity.WoDeYiChuActivity">
+    tools:context=".ui.activity.HomeWoDeYiChuActivity">
     <RelativeLayout
         android:id="@+id/tl_clothess_mTool"
         android:background="@color/top_color"
