--- a/app/src/main/res/layout/activity_pic.xml
+++ b/app/src/main/res/layout/activity_pic.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:fitsSystemWindows="true"
-    tools:context=".ui.activity.PicActivity">
+    tools:context=".ui.activity.WDYCPicActivity">
 
     <android.support.v4.view.ViewPager
         android:id="@+id/vp_pic_pics"
