--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context=".ui.activity.RegisterActivity">
+    tools:context=".ui.activity.MineRegisterActivity">
 
     <RelativeLayout
         android:id="@+id/tl_register_mTool"
