--- a/app/src/main/res/layout/activity_report.xml
+++ b/app/src/main/res/layout/activity_report.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context=".ui.activity.ReportActivity">
+    tools:context=".ui.activity.MineReportActivity">
 
     <RelativeLayout
         android:id="@+id/tl_addmatch_mTool_show"
