--- a/app/src/main/res/layout/activity_revise.xml
+++ b/app/src/main/res/layout/activity_revise.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="com.example.huichuanyi.ui.activity.ReviseActivity">
+    tools:context="com.example.huichuanyi.ui.activity.MineReviseActivity">
     <RelativeLayout
         android:id="@+id/rl_revise_top"
         android:background="@color/top_color"
