--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -1,41 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:fresco="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ui.activity.loading.SplashActivity">
 
-    <ImageView
+    <com.facebook.drawee.view.SimpleDraweeView
         android:id="@+id/iv_splash_ad"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:scaleType="fitXY"
-        android:src="@mipmap/start" />
+        fresco:actualImageScaleType="fitXY"
+        fresco:fadeDuration="1000"
+        fresco:placeholderImage="@mipmap/start"
+        fresco:placeholderImageScaleType="fitXY" />
 
-    <LinearLayout
-
-        android:layout_width="match_parent"
+    <TextView
+        android:id="@+id/tv_jump"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_marginBottom="@dimen/distance_10"
-        android:gravity="center"
-        android:orientation="horizontal">
-
-        <Button
-            android:id="@+id/btn_splash_register"
-            android:layout_width="wrap_content"
-            android:layout_height="40dp"
-            android:background="@drawable/red_4dp"
-            android:text="注册"
-            android:textColor="@color/main_color_write" />
-
-        <Button
-            android:id="@+id/btn_splash_login"
-            android:layout_width="wrap_content"
-            android:layout_height="40dp"
-            android:layout_marginLeft="20dp"
-            android:background="@drawable/red_4dp"
-            android:text="登录"
-            android:textColor="@color/main_color_write" />
-    </LinearLayout>
+        android:layout_alignParentEnd="true"
+        android:layout_marginRight="5dp"
+        android:layout_marginTop="15dp"
+        android:background="@drawable/shape_write_bg"
+        android:padding="5dp"
+        android:text="3 跳过"
+        android:textColor="@color/write"
+        android:visibility="gone" />
 </RelativeLayout>
