--- a/app/src/main/res/layout/activity_statistics.xml
+++ b/app/src/main/res/layout/activity_statistics.xml
@@ -35,7 +35,7 @@
         android:layout_below="@+id/tl_info_mTool"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="@dimen/distance"
-        app:tabBackground="@drawable/tab_background"
+        app:tabBackground="@drawable/shape_tab_background"
         app:tabIndicatorHeight="0dp"
         app:tabSelectedTextColor="@color/write"></android.support.design.widget.TabLayout>
 
