--- a/app/src/main/res/layout/include_time.xml
+++ b/app/src/main/res/layout/include_time.xml
@@ -6,31 +6,35 @@
     android:layout_height="50dp"
     android:layout_marginLeft="10dp"
     android:layout_marginRight="10dp"
-    android:orientation="vertical">
+    android:background="@drawable/shape_bg_go_door"
+    android:orientation="vertical"
+    android:padding="10dp">
 
     <com.facebook.drawee.view.SimpleDraweeView
         android:id="@+id/sv_time_picture"
         android:layout_width="33dp"
         android:layout_height="33dp"
         android:layout_centerVertical="true"
-        android:layout_margin="5dp"
-        fresco:placeholderImage="@mipmap/stand"
+        fresco:actualImageScaleType="centerCrop"
+        fresco:placeholderImage="@mipmap/hmappointmentinfo_time_image"
+        fresco:placeholderImageScaleType="centerCrop"
         fresco:roundedCornerRadius="4dp" />
 
     <TextView
+        android:id="@+id/tv_godoor_time"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
         android:layout_marginLeft="5dp"
         android:layout_toRightOf="@+id/sv_time_picture"
-        android:text="选择时间" />
+        android:text="选择时间"
+        android:textSize="15sp" />
 
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
         android:layout_centerVertical="true"
-        android:layout_marginRight="5dp"
         android:src="@mipmap/edit" />
 
 </RelativeLayout>
