--- a/app/src/main/res/layout/include_write_clothes_count.xml
+++ b/app/src/main/res/layout/include_write_clothes_count.xml
@@ -10,19 +10,22 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="请输入衣服量" />
+        android:text="请输入衣服量"
+        android:textSize="15sp" />
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:layout_marginTop="10dp">
+        android:layout_marginTop="10dp"
+        android:background="@drawable/shape_bg_go_door"
+        android:padding="10dp">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
-            android:layout_marginLeft="5dp"
-            android:text="请输入衣服量" />
+            android:text="请输入衣服量"
+            android:textSize="15sp" />
 
         <TextView
             android:id="@+id/tv_clothes_count"
@@ -30,14 +33,23 @@
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
             android:layout_centerVertical="true"
-            android:layout_marginRight="5dp"
-            android:text="件" />
+            android:text="件"
+            android:textSize="15sp" />
 
         <EditText
+            android:id="@+id/et_godoor_count"
             android:layout_width="70dp"
             android:layout_height="30dp"
             android:layout_centerVertical="true"
             android:layout_toLeftOf="@+id/tv_clothes_count"
-            android:background="@drawable/red_4dp" />
+            android:background="@drawable/background2"
+            android:digits="0123456789"
+            android:gravity="center"
+            android:hint="衣服量"
+            android:lines="1"
+            android:maxLength="4"
+            android:phoneNumber="true"
+            android:textColor="@color/write"
+            android:textSize="15sp" />
     </RelativeLayout>
 </LinearLayout>
