--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -25,8 +25,11 @@
         <item name="colorAccent">#FF4081</item>
 
     </style>
+
     <style name="MyEditText" parent="Theme.AppCompat.Light">
-        <item name="colorControlActivated">@color/write</item>
+       <!-- <item name="colorControlActivated">@color/write</item>-->
+        <item name="colorAccent">@color/write</item>
+        <item name="colorControlNormal">@color/write</item>
     </style>
     <style name="my_dialog">
         <item name="android:windowNoTitle">true</item>
