--- a/app/src/main/res/layout/activity_datum.xml
+++ b/app/src/main/res/layout/activity_datum.xml
@@ -143,6 +143,37 @@
 
                 <RelativeLayout
                     android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <TextView
+                        android:id="@+id/tv_datum_phone"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="@dimen/distance"
+                        android:text="手机："
+                        android:textSize="16sp" />
+
+                    <EditText
+                        android:id="@+id/et_datum_phone"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="@dimen/distance"
+                        android:layout_toRightOf="@+id/tv_datum_phone"
+                        android:background="@drawable/hm_background"
+                        android:digits="0123456789"
+                        android:hint="请输入手机号"
+                        android:maxLength="11"
+                        android:textSize="14sp" />
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="1dp"
+                        android:layout_below="@+id/tv_datum_phone"
+                        android:background="@color/back_ground" />
+                </RelativeLayout>
+
+                <RelativeLayout
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:paddingBottom="@dimen/distance">
 
