--- a/app/src/main/res/layout/order_person.xml
+++ b/app/src/main/res/layout/order_person.xml
@@ -2,10 +2,11 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:fresco="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:layout_margin="@dimen/distance_5"
     android:background="@drawable/hm_background"
-    android:orientation="horizontal">
+    android:orientation="horizontal"
+    android:paddingBottom="5dp">
 
     <com.facebook.drawee.view.SimpleDraweeView
         android:id="@+id/sv_csmc_photo"
@@ -32,7 +33,7 @@
             android:maxLength="8"
             android:text="加载中..."
             android:textColor="#333333"
-            android:textSize="@dimen/text_size_16" />
+            android:textSize="15sp" />
 
         <TextView
             android:id="@+id/tv_person_order"
@@ -59,17 +60,19 @@
 
     <RelativeLayout
         android:layout_width="0dp"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:layout_marginRight="@dimen/distance_5"
         android:layout_marginTop="@dimen/distance_5"
-        android:layout_weight="1">
+        android:layout_weight="1"
+        android:paddingBottom="5dp">
 
         <TextView
             android:id="@+id/tv_person_city"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
-            android:text="加载中..." />
+            android:text="加载中..."
+            android:textSize="13sp" />
 
         <TextView
             android:id="@+id/tv_person_news"
@@ -82,6 +85,14 @@
             android:padding="@dimen/distance_5"
             android:text="资格认证"
             android:textColor="@color/main_color_write" />
+
+        <TextView
+            android:id="@+id/tv_person_jl"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/tv_person_news"
+            android:layout_centerHorizontal="true"
+            android:textSize="12sp" />
     </RelativeLayout>
 
 </LinearLayout>
