--- a/app/src/main/res/layout/activity_price_closing.xml
+++ b/app/src/main/res/layout/activity_price_closing.xml
@@ -88,7 +88,7 @@
     </LinearLayout>
 
 
-    <include layout="@layout/include_pay_type"></include>
+    <include layout="@layout/include_pay_list_type"></include>
 
     <RelativeLayout
         android:layout_width="match_parent"
